# psychological-state-analysis

./: .gitignore  .pre-commit-config.yaml  README.md  README_щдв.md  infer.py  main.py  pyproject.toml
.dvc/: config
configs/: config.yaml
configs/baseline/: default.yaml
configs/data/: default.yaml
configs/export/: default.yaml
configs/logger/: default.yaml
configs/model/: distilbert.yaml
configs/train/: default.yaml
data/: Data.csv.dvc
models/: best_model.onnx.dvc
psychology_state_analyzer/: commands.py
psychology_state_analyzer/data_processing/: baseline_preprocess.py  datamodule.py  dataset.py  load_data.py
psychology_state_analyzer/model_class/: baseline.py  main_model.py
psychology_state_analyzer/models/: main_model.py
psychology_state_analyzer/train_models/: train_baseline.py  train_main_model.py
psychology_state_analyzer/utils/: export_to_onnx.py  export_to_tensorrt.py
triton/: run_triton_server.sh
triton/model_repository/psychological_state_analyzer/: config.pbtxt
triton_server/: run_triton_server.sh
