[project]
name = "psychological-state-analysis"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "dvc>=3.67.1",
    "dvc-gdrive>=3.0.1",
    "hydra-core>=1.3.3",
    "mlflow>=3.1.4",
    "pytorch-lightning>=2.6.0",
    "torch>=2.8.0",
    "transformers>=4.57.6",
]

[dependency-groups]
dev = [
    "pre-commit>=4.3.0",
    "pytest>=8.4.2",
    "ruff>=0.15.17",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["psychology_state_analyzer*"]
